--- a/app/views/admin/categories/_form.html.erb
+++ b/app/views/admin/categories/_form.html.erb
@@ -1,23 +1,16 @@
-<%= form_for([:admin, @category]) do |f| %>
-  <% if @category.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@category.errors.count, "error") %> prohibited this category from being saved:</h2>
-
-      <ul>
-      <% @category.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+<%= form_for [:admin, @category], :html => { :class => 'form-horizontal' } do |f| %>
+  <%= render 'shared/error_messages', :target => @category %>
 
   <%= f.hidden_field :parent_id %>
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
+  <div class="control-group">
+    <%= f.label :name, '分类名', class: 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :name %>
+    </div>
   </div>
 
-  <div class="actions">
-    <%= f.submit %>
+  <div class="form-actions">
+    <%= f.submit '提交', class: 'btn' %>
+    <%= link_to '返回', admin_categories_path, class: 'btn' %>
   </div>
 <% end %>
