--- a/app/views/admin/products/_form.html.erb
+++ b/app/views/admin/products/_form.html.erb
@@ -1,19 +1,11 @@
-<%= form_for([:admin, @product]) do |f| %>
-  <% if @product.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@product.errors.count, "error") %> prohibited this product from being saved:</h2>
+<%= form_for [:admin, @product], :html => { :class => 'form-horizontal' } do |f| %>
+  <%= render 'shared/error_messages', :target => @product %>
 
-      <ul>
-      <% @product.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
+  <div class="control-group">
+    <%= f.label :name, '名称', :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :name, :class => 'text_field' %>
     </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :name, '名称' %><br />
-    <%= f.text_field :name %>
   </div>
   <div class="control-group">
     <%= f.label :image, '图片', :class => 'control-label' %>
@@ -25,19 +17,24 @@
       </ul>
     <% end %>
     <div class="controls">
-			<%= f.hidden_field :image_cache %>
-			<%= f.file_field :image %>
+      <%= f.hidden_field :image_cache %>
+      <%= f.file_field :image %>
     </div>
   </div>
-  <div class="field">
-    <%= f.label :description, '产品描述' %><br />
-    <%= f.text_area :description %>
+  <div class="control-group">
+    <%= f.label :description, '描述', class: 'control-label' %>
+    <div class="controls">
+      <%= f.text_area :description, :style => "width: 400px;", :cols => '100', :rows => 12, class: 'text-area' %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :category, '分类' %><br />
-    <%= f.select :category_id, Category.all.collect { |c| [c.name, c.id] } %>
+  <div class="control-group">
+    <%= f.label :category, '分类', class: 'control-label' %>
+    <div class="controls">
+      <%= f.select :category_id, Category.all.collect { |c| [c.name, c.id] } %>
+    </div>
   </div>
-  <div class="actions">
+
+  <div class="form-actions">
     <%= f.submit '提交', class: 'btn' %>
     <%= link_to '返回', admin_products_path, class: 'btn' %>
   </div>
