--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -22,28 +22,6 @@
   <% end %>
 </ul>
 
-<table class="table table-bordered table-striped table-hover table-condensed">
-  <thead>
-    <tr>
-      <th>名称</th>
-      <th>描述</th>
-      <th>分类</th>
-      <th colspan="2">操作</th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @products.each do |product| %>
-    <tr>
-      <td><a href='<%= admin_product_path(product) %>' rel="popover" data-trigger="hover" data-content='<%= sanitize image_tag(product.image.thumb.url) %>' data-title="<%= product.name %>"><%= product.name %></a></td>
-      <td><%= product.description %></td>
-      <td><%= product.category.name if product.category %></td>
-      <td><%= link_to '修改', edit_admin_product_path(product) %></td>
-      <td><%= link_to '删除', admin_product_path(product), method: :delete, data: { confirm: 'Are you sure?' } %></td>
-    </tr>
-    <% end %>
-  </tbody>
-</table>
-
+<%= will_paginate @products %>
 
 <%= link_to '新增', new_admin_product_path, class: 'btn' %>
