--- a/app/views/admin/topics/show.html.erb
+++ b/app/views/admin/topics/show.html.erb
@@ -2,8 +2,7 @@
   <li class="active">新闻 - <%= @topic.title %><li>
 </ul>
 
-<pre><%= @topic.body %></pre>
-
+<%= content_tag(:pre, @topic.body) unless @topic.body.blank? %>
 
 <%= link_to '修改', edit_admin_topic_path(@topic), class: 'btn' %>
 <%= link_to '返回', admin_topics_path, class: 'btn' %>
