--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -2,7 +2,7 @@
   <li class="active">分类管理<li>
 </ul>
 
-<div class="well sidebar-nav">
+<div class="category well sidebar-nav">
   <ul class="nav nav-list">
     <li class="nav-header"><span>分类导航 <%= link_to '新增', new_admin_category_path %></span></li>
     <% Category.roots.each do |category| %>
@@ -10,7 +10,7 @@
         <b><%= category.name %></b>
         <span><%= link_to '新增', new_admin_category_path(parent_id: category) %></span>
         <span><%= link_to '修改', edit_admin_category_path(category) %></span>
-        <span><%= link_to '删除', admin_category_path(category), method: :delete, data: { confirm: 'Are you sure?' } %></span>
+        <span><%= link_to '删除', admin_category_path(category), method: :delete, data: { confirm: t('confirm') } %></span>
       </li>
       <% if category.has_children? %>
         <ul class="nav nav-list">
@@ -18,7 +18,7 @@
             <li>
               <%= child.name  %>
               <span><%= link_to '修改', edit_admin_category_path(child) %></span>
-              <span><%= link_to '删除', admin_category_path(child), method: :delete, data: { confirm: 'Are you sure?' } %></span>
+              <span><%= link_to '删除', admin_category_path(child), method: :delete, data: { confirm: t('confirm') } %></span>
             </li>
           <% end %>
         </ul>
