--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,26 +1,29 @@
-<header class="navbar navbar-static-top">
-  <div class="navbar-inner">
-    <div class="container">
-      <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </a>
-      <%= link_to "湖南雅致炜锋服饰", root_path, class: 'brand' %>
-      <div class="nav-collapse collapse">
-        <ul class="nav">
-          <%= content_tag('li', link_to("首页", root_path), :class => ('active' if controller_name == 'products' && action_name == 'index')) %>
-          <%= content_tag('li', link_to("简介", '/info')) %>
-          <%= content_tag('li', link_to("产品", root_path)) %>
-          <%= content_tag('li', link_to("案例", '/')) %>
-          <%= content_tag('li', link_to("新闻", '/')) %>
-          <%= content_tag('li', link_to("留言", '/message')) %>
-          <%= content_tag('li', link_to("荣誉", '/honor')) %>
-          <%= content_tag('li', link_to("联系", '/contact')) %>
-        </ul>
-      </div><!--/.nav-collapse -->
+<section id="header" class="container">
+    <%= image_tag('01.jpg') %>
+</section>
+<section id="menu" class="container">
+  <div id="nav" class="navbar navbar-static-top">
+    <div class="navbar-inner">
+      <div class="container">
+        <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </a>
+        <%= link_to "湖南雅致炜锋服饰", root_path, class: 'brand' %>
+        <div class="nav-collapse collapse">
+          <ul class="nav">
+            <%= content_tag('li', link_to("首页", root_path), class: ('active' if controller_name == 'pages' && action_name == 'home')) %>
+            <%= content_tag('li', link_to("简介", info_path), class: ('active' if action_name == 'info')) %>
+            <%= content_tag('li', link_to("产品", products_path), class: ('active' if controller_name == 'products' && action_name == 'index')) %>
+            <%= content_tag('li', link_to("案例", cases_path), class: ('active' if action_name == 'cases')) %>
+            <%= content_tag('li', link_to("新闻", topics_path), class: ('active' if controller_name == 'topics' && action_name == 'index')) %>
+            <%= content_tag('li', link_to("留言", message_path), class: ('active' if action_name == 'message')) %>
+            <%= content_tag('li', link_to("荣誉", honor_path), class: ('active' if action_name == 'honor')) %>
+            <%= content_tag('li', link_to("联系", contact_path), class: ('active' if action_name == 'contact')) %>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
     </div>
   </div>
-</header>
-
+</section>
