--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -64,7 +64,7 @@
               <li><%= link_to "产品", admin_products_path  %></li>
               <li><%= link_to "分类", admin_categories_path  %></li>
               <li><%= link_to "新闻", admin_topics_path  %></li>
-              <li><%= link_to "留言", admin_root_path  %></li>
+              <li><%= link_to "留言", admin_messages_path  %></li>
             </ul>
           </div><!--/.well -->
         </div><!--/span-->
