--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,2 +1,6 @@
-<%= product.name %>
-<%= product.description %>
+<li class="span2">
+  <%= link_to image_tag(product.image.thumb.url), product, class: '' %>
+  <div class="caption" style="text-align: center">
+    <p><%= product.name %></p>
+  </div>
+</li>
