--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <section id="header" class="container">
-    <%= image_tag('01.jpg') %>
+    <%= image_tag('logo.jpg') %>
 </section>
 <section id="menu" class="container">
   <div id="nav" class="navbar navbar-static-top">
