--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,5 +1,5 @@
 <ul class="breadcrumb">
-  <li class="active"><%= @product.name %><li>
+  <li class="active">产品 - <%= @product.name %><li>
 </ul>
 <% if @product.image? %>
     <ul class="thumbnails">
