--- a/app/views/admin/topics/index.html.erb
+++ b/app/views/admin/topics/index.html.erb
@@ -22,7 +22,7 @@
     <tr>
       <td><%= link_to truncate(topic.title, length: 10), [:admin, topic] %></td>
       <td><%= truncate(topic.body, length: 30) %></td>
-      <td><%= topic.created_at.in_time_zone('Beijing') %></td>
+      <td><%= topic.created_at.to_date %></td>
       <td><%= link_to '修改', edit_admin_topic_path(topic) %></td>
       <td><%= link_to '删除', admin_topic_path(topic), method: :delete, data: { confirm: t('confirm') } %></td>
     </tr>
