--- a/app/views/layouts/_carousel.html.erb
+++ b/app/views/layouts/_carousel.html.erb
@@ -4,9 +4,12 @@
     <div class="item active">
       <%= image_tag('01.jpg') %>
     </div>
+    <div class="item">
+      <%= image_tag('02.jpg') %>
+    </div>
   </div>
   <!-- Carousel nav -->
-  <%#<a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>%>
-  <%#<a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>%>
+  <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
+  <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
 </div>
 
