--- a/app/views/admin/messages/index.html.erb
+++ b/app/views/admin/messages/index.html.erb
@@ -19,7 +19,7 @@
       <td><%= link_to truncate(message.body, length: 10), [:admin, message] %></td>
       <td><%= truncate(message.name, length: 30) %></td>
       <td><%= message.contact %></td>
-      <td><%= message.created_at.in_time_zone('Beijing') %></td>
+      <td><%= message.created_at.to_date %></td>
       <td><%= link_to '删除', admin_message_path(message), method: :delete, data: { confirm: t('confirm') } %></td>
     </tr>
     <% end %>
