add a margin between navbar and page body

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,7 @@
     <%= image_tag('logo.jpg') %>
 </section>
 <section id="menu" class="container">
-  <div id="nav" class="navbar navbar-static-top">
+  <div id="nav" class="navbar">
     <div class="navbar-inner">
       <div class="container">
         <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
