navbar 的 active class

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,10 +15,10 @@
           <ul class="nav">
             <%= content_tag('li', link_to("首页", root_path), class: ('active' if controller_name == 'pages' && action_name == 'home')) %>
             <%= content_tag('li', link_to("简介", info_path), class: ('active' if action_name == 'info')) %>
-            <%= content_tag('li', link_to("产品", products_path), class: ('active' if controller_name == 'products' && action_name == 'index')) %>
+            <%= content_tag('li', link_to("产品", products_path), class: ('active' if controller_name == 'products')) %>
             <%= content_tag('li', link_to("案例", cases_path), class: ('active' if action_name == 'cases')) %>
-            <%= content_tag('li', link_to("新闻", topics_path), class: ('active' if controller_name == 'topics' && action_name == 'index')) %>
-            <%= content_tag('li', link_to("留言", message_path), class: ('active' if action_name == 'message')) %>
+            <%= content_tag('li', link_to("新闻", topics_path), class: ('active' if controller_name == 'topics')) %>
+            <%= content_tag('li', link_to("留言", message_path), class: ('active' if controller_name == 'messages')) %>
             <%= content_tag('li', link_to("荣誉", honor_path), class: ('active' if action_name == 'honor')) %>
             <%= content_tag('li', link_to("联系", contact_path), class: ('active' if action_name == 'contact')) %>
           </ul>
