--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,50 +1,11 @@
 <ul class="breadcrumb">
   <li class="active">联系我们<li>
 </ul>
-湖南锦衣服装有限公司
+<pre>
+销售热线: 0731-82737168 13874814662
+QQ: 1138524616 QQ: 2307224232
+网址: <%= link_to 'www.yzwffs.com', 'http://www.yzwffs.com' %> <%= link_to 'yzwffs.taobao.com', 'http://yzwffs.taobao.com' %> 
+邮箱: <%= mail_to '1138524616@qq.com' %>
 
-闫经理：15367999623　　　　
-
-电　话：0731－84225262/89852020/89820520/89820530
-
-地　址：湖南省长沙市芙蓉区车站北路瑞丰家园8楼 
-
-
-客服QQ：1203147386  420396026    
-　　　　529675907　1659063213
-
-　　
-下面是table
-招聘职位：	熟练缝纫工	工资待遇：	面议
-招聘人数：	80	发布时间：	
- 
-
-工作地点：	湖南-长沙 (全职)	截止时间：	长期招聘
-招聘要求：	
-本厂因扩大生产需要急聘熟练的缝纫师80名！货源稳定，包吃住！月工资在1800以上(车位按计件算) 。另聘裁剪5名！包吃住，月工资2000-2500，两年以上工作经验。
-
-
-招聘职位：	
- 销售
-
-工资待遇：	面议
-招聘人数：	5	发布时间：	
- 
-
-工作地点：	湖南-长沙 (全职)	截止时间：	2012.10.1
-招聘要求：	
-1、有工作经验者优先 2、固定底薪+提成，全职。3、另聘打样设计师裁剪师各一名（3年以上工作经验者优先）欢迎来电。
-
- 
-
-招聘职位：	烫工	工资待遇：	面议
-招聘人数：	10	发布时间：	
- 
-
-工作地点：	湖南-长沙 (全职)	截止时间：	2012.9.1
-招聘要求：	
-包吃住！月工资2000-2500，两年以上工作经验。
-
- 
-
-  欢迎来电：0731——84225262   从这一刻开始，锦衣卫服饰为您企业服饰形象保驾护航！
+地址: 长沙市芙蓉区长沙市远大路1398号东岸城邦16楼
+</pre>
