--- a/app/views/pages/honor.html.erb
+++ b/app/views/pages/honor.html.erb
@@ -2,5 +2,8 @@
   <li class="active">荣誉<li>
 </ul>
 
-放企业证书等
-  欢迎来电：0731——84225262   从这一刻开始，锦衣卫服饰为您企业服饰形象保驾护航！
+<div class="offset1">
+  <%= image_tag 'honor.png' %>
+  <br />
+  <%= image_tag 'certificate.png' %>
+</div>
