--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -1,20 +1,22 @@
 <ul class="breadcrumb">
   <li class="active">公司简介<li>
 </ul>
-<div class="well">
-  湖南锦衣服装有限公司是一家专业化、正规化的服装设计和制作公司，公司培养了一批以年轻人为骨干力量的、富有创意、高层次、高效率的专业人才队伍，包括经验丰富的毕业于清华美院的服装设计师、服装打样、制版、企业形象策划师，拥有国际国内先进的现代化服装生产线9条（其中包括意大利、德国和国内顶级上海的生产线），具有严格的服装质量管理体系和完善的售后服务体系。
 
-　　湖南锦衣服装有限公司对每一笔订单，无论大小，都一定做到：针对实际，独立设计，以保证客户特有的个性化形象；真材实料，精工细做，以保证制服品质的长期稳定性，售后跟踪，持续服务，全面解决客户的一切后顾之忧。凭借这一系列专业化、规范化的经营管理机制，在行业的知名度蒸蒸日上。
+<pre>
+<p class="important">  *定制理念：倡导英伦风格--修身、和体
 
-　　锦衣服装自2008年创办以来，以优质的产品质量、诚实的信誉和优良的售后服务，深得广大客户的认可，服务对象遍及湖南各大企事业单位、星级酒店和娱乐场所。
+  *进口面料：轻薄、柔软、挺括、抗皱、垂感性强
 
-　　正因为有这样一支强大而又充满活力的队伍，锦衣服装在日益激烈的服装行业竞争中脱颖而出，从创业时的几间平房发展到如今在湖南的服装公司中名列前茅，并赢得了客户有口皆碑的盛誉。
-
-　　我们可以自信地向每一位客户承诺——选择了锦衣就选择了制服专家。
-
- 
-
-　　欢迎来电：0731——84225262   从这一刻开始，锦衣服装为您企业服装形象保
-
-驾护航！
-</div>
+  *工艺要求：技术精湛，全手工制作
+</p>
+<p>  湖南雅致炜锋服饰有限公司致力于品牌服装的开发设计、生产及销售一体化。拥有国际先进的设计理念外，在中南部地区拥有大型的生产工厂，并引进了国际上较先进的立体定型、电脑打板、排版一体化系统及紫外线开袋等设备。师资雄厚的生产团队结合精良、先进的生产设备，打造中南部地区职业装最专业品牌形象，设计部经过多年的积累，现已拥有数以千款的制服图库及制服样衣展示。长期承接企业订单，单位团购，来料加工，现货购买等业务。
+   自二00六年在大陆市场新成立以来，主要生产和销售各类企事业单位、银行、学校、酒店、商场、医院、客运公司、工厂制服、高档西服、文化衫、广告衫、促销服、广告帽、广告围裙、马夹、帽衫、无纺布袋、护士服、T恤等服饰系列。雅致炜锋服饰在借鉴欧美、韩国品牌制服经验的同时，雅致炜锋服饰倡导个性化、时尚化、简约化风格，结合我国各行业制服的特点，摆脱制服一贯的单一、呆板设计，严选最优质的布料配以精湛手艺，创造出质优卓越的尊贵系列，让您真正做到庄重一身，非凡一生。
+“定制”永远是品质、尊贵与独有的象征。对于想彰显自己个性与生活品位的绅士们来说，一套“Bespoke Tailoring”（全量身定制）西服是必不可少的。唯一、专属、独一无二，设计与裁剪都依据你自己的身材特点度身打造，这不仅仅是一套西服、一件衫衣，更是 贴身、完美与高贵的代名词。
+我们拥有先进的进口生产设备，多年的定制经验，选用质地优良的国内及意大利顶级面料，精湛的工艺，精美的手工，为您量身打造 一套专属于您自己的高级西服，让您享受贴身、舒适的着装感受以及无微不至的尊贵服务，不仅仅是凸显地位与彰显个性，更是一种对生活品质的完美追求。雅致炜锋服装强烈明快的色彩搭配及知性儒雅的设计理念,给人丰富的视觉冲击.全新的职场理念随着色彩构成的不同韵律交织在职场人澎湃的感受中. 
+   雅致炜锋推出品牌服饰在市场销售过程中,以选面料看做工等于成装的经营理念,取得了各层次消费者的认可与好评.雅致炜锋做到品位高、价格低、工薪阶层都能承受，雅致炜锋服饰可省掉中间商、明星形象费等各种高额费用. 在品质不变的的情况下价格更要优惠60%以上。
+   雅致炜锋,享誉国内的著名服饰品牌,同时也在为国内最具时尚与风采的职业服加工基地,已为国内众多著名机构与企业定制职业服装。
+在全球经济一体化的新纪元,在激烈的市场竞争格局中,您和您的企业,面对无时不在的竞争与压力,在您的竞争策略中,可曾想到----制服文化助您成功!
+   成功的制服文化不仅能让您的员工增添职业意识与使命感,更重要的是,制服文化将给您带来全新的企事业文化,成为创造经济效益的重要环节。锦衣为您企业制服文化保驾护航！
+   雅致炜锋服饰本着“以诚待人、顾客至上”的服务宗旨；“以信为本，质量上乘”的经营理念”以严格的经营管理方式与完善的售后服务体系，旨在打造21世纪中国职业装最专业品牌形象。
+</p>
+</pre>
