--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,5 +1,5 @@
 <li class="span2">
-  <%= link_to image_tag(product.image.thumb.url), product, class: '' %>
+  <%= link_to image_tag(product.image.thumb.url, class: 'image'), product %>
   <div class="caption" style="text-align: center">
     <p><%= product.name %></p>
   </div>
