留言和案例页面样式修改

--- a/app/views/pages/cases.html.erb
+++ b/app/views/pages/cases.html.erb
@@ -1,10 +1,8 @@
 <ul class="breadcrumb">
   <li class="active">案例<li>
 </ul>
-<p>
+<pre>
 通过多年来对全国服装市场的摸索与积累、以及对市场的全面优化与整合，人性化销售及售后服务，开创了全新的销售服务体系，现有百余家著名企、事业单位与其长期友好合作，并赢得了消费者的信任和广大客户的好评。
-</p>
 <%= image_tag 'cases.png' %>
-<p>
 其它单位：长沙新华书店 衡阳妇幼保健院 衡阳疾控中心 衡阳政务中心 耒阳疾控中心 湘潭疾控中心  祁东农村信用信用联社  常林农村信用合作联社 岳阳农村信用合作联社 南岳农村信用合作联社 郴州房地产等等
-</p>
+</pre>
