--- a/app/views/pages/honor.html.erb
+++ b/app/views/pages/honor.html.erb
@@ -1,6 +1,4 @@
-<ul class="breadcrumb">
-  <li class="active">荣誉<li>
-</ul>
+<%= render 'shared/breadcrumb', title: "荣誉" %>
 
 <div class="offset1">
   <%= image_tag 'honor.png' %>
