--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -1,6 +1,4 @@
-<ul class="breadcrumb">
-  <li class="active">公司简介<li>
-</ul>
+<%= render 'shared/breadcrumb', title: '公司简介' %>
 
 <pre>
 <p class="important">  *定制理念：倡导英伦风格--修身、和体
