--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,4 @@
-<ul class="breadcrumb">
-  <li class="active">产品列表<li>
-</ul>
+<%= render 'shared/breadcrumb', title: '产品列表' %>
 
 <ul class="thumbnails">
   <%= render @products %>
