--- a/app/assets/stylesheets/topics.css.scss
+++ b/app/assets/stylesheets/topics.css.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the topics controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.topics {
+  a {
+    color: #777777;
+  }
+  a:hover {
+    color: #331;
+  }
+}
