--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,6 +1,5 @@
-<ul class="breadcrumb">
-  <li class="active">联系我们<li>
-</ul>
+<%= render 'shared/breadcrumb', title: "联系我们" %>
+
 <pre>
 销售热线: 0731-82737168 13874814662
 QQ: 1138524616 QQ: 2307224232
