new hash style && active class in admin category tree && breadcrumb in admin pages

--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -1,6 +1,4 @@
-<ul class="breadcrumb">
-  <li class="active">分类管理<li>
-</ul>
+<%= render 'shared/breadcrumb', title: "分类管理" %>
 
 <div class="category well sidebar-nav">
   <ul class="nav nav-list">
