--- a/app/views/admin/messages/index.html.erb
+++ b/app/views/admin/messages/index.html.erb
@@ -1,6 +1,4 @@
-<ul class="breadcrumb">
-  <li class="active">留言管理<li>
-</ul>
+<%= render 'shared/breadcrumb', title: "留言管理" %>
 
 <table class="table table-bordered table-striped table-hover">
   <thead>
