--- a/app/views/admin/messages/show.html.erb
+++ b/app/views/admin/messages/show.html.erb
@@ -1,6 +1,4 @@
-<ul class="breadcrumb">
-  <li class="active">留言信息<li>
-</ul>
+<%= render 'shared/breadcrumb', title: "留言信息" %>
 
 <p>
   <%= @message.name %>
