--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -1,6 +1,4 @@
-<ul class="breadcrumb">
-  <li class="active">产品修改<li>
-</ul>
+<%= render 'shared/breadcrumb', title: "产品修改" %>
 
 <%= render 'form' %>
 
