--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -1,6 +1,4 @@
-<ul class="breadcrumb">
-  <li class="active">产品管理<li>
-</ul>
+<%= render 'shared/breadcrumb', title: "产品管理" %>
 
 <div class="clearfix">
   <%= link_to '新增', new_admin_product_path, :class => "btn" %>
