--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -12,6 +12,6 @@
 </pre>
 
 <div>
-  <%= link_to '所有产品', products_path, :class => "btn" %>
+  <%= link_to '所有产品', products_path, class: "btn" %>
 </div>
 
