--- a/app/views/admin/categories/_form.html.erb
+++ b/app/views/admin/categories/_form.html.erb
@@ -1,5 +1,5 @@
-<%= form_for [:admin, @category], :html => { :class => 'form-horizontal' } do |f| %>
-  <%= render 'shared/error_messages', :target => @category %>
+<%= form_for [:admin, @category], html: { class: 'form-horizontal' } do |f| %>
+  <%= render 'shared/error_messages', target: @category %>
 
   <%= f.hidden_field :parent_id %>
   <div class="control-group">
