--- a/app/views/admin/categories/edit.html.erb
+++ b/app/views/admin/categories/edit.html.erb
@@ -1,6 +1,4 @@
-<ul class="breadcrumb">
-  <li class="active">分类修改<li>
-</ul>
+<%= render 'shared/breadcrumb', title: "分类修改" %>
 
 <%= render 'form' %>
 
