--- a/app/views/admin/categories/new.html.erb
+++ b/app/views/admin/categories/new.html.erb
@@ -1,6 +1,4 @@
-<ul class="breadcrumb">
-  <li class="active">新增分类<li>
-</ul>
+<%= render 'shared/breadcrumb', title: "新增分类" %>
 
 <%= render 'form' %>
 
