--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -1,6 +1,4 @@
-<ul class="breadcrumb">
-  <li class="active">产品新增<li>
-</ul>
+<%= render 'shared/breadcrumb', title: "产品新增" %>
 
 <%= render 'form' %>
 
