--- a/app/views/admin/topics/edit.html.erb
+++ b/app/views/admin/topics/edit.html.erb
@@ -1,6 +1,4 @@
-<ul class="breadcrumb">
-  <li class="active">新闻修改<li>
-</ul>
+<%= render 'shared/breadcrumb', title: "新闻修改" %>
 
 <%= render 'form' %>
 
