--- a/app/views/admin/topics/new.html.erb
+++ b/app/views/admin/topics/new.html.erb
@@ -1,6 +1,4 @@
-<ul class="breadcrumb">
-  <li class="active">新闻新增<li>
-</ul>
+<%= render 'shared/breadcrumb', title: "新闻新增" %>
 
 <%= render 'form' %>
 
