--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -61,10 +61,10 @@
           <div class="well sidebar-nav">
             <ul class="nav nav-list">
               <li class="nav-header">导航</li>
-              <li><%= link_to "产品", admin_products_path  %></li>
-              <li><%= link_to "分类", admin_categories_path  %></li>
-              <li><%= link_to "新闻", admin_topics_path  %></li>
-              <li><%= link_to "留言", admin_messages_path  %></li>
+              <li class="<%= (current_page?(admin_products_path) or current_page?(admin_root_path))? 'active' : nil %>"><%= link_to "产品", admin_products_path %></li>
+              <li class="<%= current_page?(admin_categories_path)? 'active' : nil %>"><%= link_to "分类", admin_categories_path  %></li>
+              <li class="<%= current_page?(admin_topics_path)? 'active' : nil %>"><%= link_to "新闻", admin_topics_path  %></li>
+              <li class="<%= current_page?(admin_messages_path)? 'active' : nil %>"><%= link_to "留言", admin_messages_path  %></li>
             </ul>
           </div><!--/.well -->
         </div><!--/span-->
