--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -4,7 +4,7 @@
   <tbody>
     <% @topics.each do |topic| %>
     <tr>
-      <td><%= link_to topic.title, topic %><span class="pull-right date">[<%= topic.created_at.to_date %>]</span></td>
+      <td><%= link_to topic.title, topic %><span class="pull-right date">[<%= l topic.created_at.to_date %>]</span></td>
     </tr>
     <% end %>
   </tbody>
