--- a/app/views/admin/topics/show.html.erb
+++ b/app/views/admin/topics/show.html.erb
@@ -1,6 +1,6 @@
 <%= render 'shared/breadcrumb', title: "新闻 - #{@topic.title}" %>
 
-<%= content_tag(:pre, @topic.body) unless @topic.body.blank? %>
+<%= content_tag(:pre, @topic.body.html_safe) unless @topic.body.blank? %>
 
 <%= link_to '修改', edit_admin_topic_path(@topic), class: 'btn' %>
 <%= link_to '返回', admin_topics_path, class: 'btn' %>
