--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -1,14 +1,14 @@
 <%= render 'shared/breadcrumb', title: "产品管理" %>
 
 <div class="clearfix">
-  <%= link_to '新增', new_admin_product_path, :class => "btn" %>
+  <%= link_to '新增', new_admin_product_path, class: "btn" %>
 </div>
 <br />
 
 <ul class="thumbnails">
   <% @products.each do |product| %>
     <li class="span2">
-      <%= link_to image_tag(product.image.thumb.url), [:admin, product], :class => 'thumbnail' %>
+      <%= link_to image_tag(product.image.thumb.url), [:admin, product], class: 'thumbnail' %>
       <div class="caption" style="text-align: center">
         <h5><%= product.name %></h5>
         <p>
