--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -4,26 +4,26 @@
   <%= render 'shared/error_messages', target: @user %>
 
   <div class="control-group">
-    <%= f.label :email, '邮箱', class: 'control-label' %>
+    <%= f.label :email, class: 'control-label' %>
     <div class="controls">
       <%= f.text_field :email, class: 'text_field uneditable-input', disabled: 'disabled' %>
       <span class="help-block">如果您想修改您的账户邮箱,请联系<%= mail_to "gonglexin@gmail.com", "@gonglexin" %></span>
     </div>
   </div>
   <div class="control-group">
-    <%= f.label :current_password, '旧密码', class: 'control-label' %>
+    <%= f.label :current_password, class: 'control-label' %>
     <div class="controls">
       <%= f.password_field :current_password %>
     </div>
   </div>
   <div class="control-group">
-    <%= f.label :password, "密码", class: 'control-label' %>
+    <%= f.label :password, class: 'control-label' %>
     <div class="controls">
       <%= f.password_field :password %>
     </div>
   </div>
   <div class="control-group">
-    <%= f.label :password_confirmation, "确认密码", class: 'control-label' %>
+    <%= f.label :password_confirmation, class: 'control-label' %>
     <div class="controls">
       <%= f.password_field :password_confirmation %>
     </div>
