--- a/app/views/admin/categories/_form.html.erb
+++ b/app/views/admin/categories/_form.html.erb
@@ -3,7 +3,7 @@
 
   <%= f.hidden_field :parent_id %>
   <div class="control-group">
-    <%= f.label :name, '分类名', class: 'control-label' %>
+    <%= f.label :name, class: 'control-label' %>
     <div class="controls">
       <%= f.text_field :name %>
     </div>
