--- a/app/views/admin/topics/_form.html.erb
+++ b/app/views/admin/topics/_form.html.erb
@@ -2,13 +2,13 @@
   <%= render 'shared/error_messages', target: @topic %>
 
   <div class="control-group">
-    <%= f.label :title, '标题', class: 'control-label' %>
+    <%= f.label :title, class: 'control-label' %>
     <div class="controls">
       <%= f.text_field :title, class: 'text_field' %>
     </div>
   </div>
   <div class="control-group">
-    <%= f.label :body, '内容', class: 'control-label' %>
+    <%= f.label :body, class: 'control-label' %>
     <div class="controls">
       <%= f.text_area :body, style: "width: 400px;", cols: 100, rows: 12, class: 'text-area' %>
     </div>
